form data Update index.html

--- a/index.html
+++ b/index.html
@@ -672,19 +672,19 @@
                         <input type="hidden" name="_captcha" value="false">
                         <div>
                             <label class="block text-sm font-bold text-slate-700 mb-2" for="name">Full Name</label>
-                            <input type="text" id="name" class="w-full px-4 py-3 rounded-xl bg-slate-50 border border-slate-200 focus:border-brand-primary focus:ring-4 focus:ring-blue-100 outline-none transition text-slate-900" placeholder="e.g. Arun Kumar" required>
+                            <input type="text" id="name" name="Full Name" class="w-full px-4 py-3 rounded-xl bg-slate-50 border border-slate-200 focus:border-brand-primary focus:ring-4 focus:ring-blue-100 outline-none transition text-slate-900" placeholder="e.g. Arun Kumar" required>
                         </div>
                         <div>
                             <label class="block text-sm font-bold text-slate-700 mb-2" for="email">Work Email</label>
-                            <input type="email" id="email" class="w-full px-4 py-3 rounded-xl bg-slate-50 border border-slate-200 focus:border-brand-primary focus:ring-4 focus:ring-blue-100 outline-none transition text-slate-900" placeholder="arun@company.com" required>
+                            <input type="email" id="email" name="Work Email" class="w-full px-4 py-3 rounded-xl bg-slate-50 border border-slate-200 focus:border-brand-primary focus:ring-4 focus:ring-blue-100 outline-none transition text-slate-900" placeholder="arun@company.com" required>
                         </div>
                         <div>
                             <label class="block text-sm font-bold text-slate-700 mb-2" for="website">Website URL</label>
-                            <input type="url" id="website" class="w-full px-4 py-3 rounded-xl bg-slate-50 border border-slate-200 focus:border-brand-primary focus:ring-4 focus:ring-blue-100 outline-none transition text-slate-900" placeholder="https://company.com">
+                            <input type="url" id="website" name="Website" class="w-full px-4 py-3 rounded-xl bg-slate-50 border border-slate-200 focus:border-brand-primary focus:ring-4 focus:ring-blue-100 outline-none transition text-slate-900" placeholder="https://company.com">
                         </div>
                         <div>
                             <label class="block text-sm font-bold text-slate-700 mb-2" for="budget">Monthly Ad Budget</label>
-                            <select id="budget" class="w-full px-4 py-3 rounded-xl bg-slate-50 border border-slate-200 focus:border-brand-primary focus:ring-4 focus:ring-blue-100 outline-none transition text-slate-900 appearance-none">
+                            <select id="budget" name="Monthly Budget" class="w-full px-4 py-3 rounded-xl bg-slate-50 border border-slate-200 focus:border-brand-primary focus:ring-4 focus:ring-blue-100 outline-none transition text-slate-900 appearance-none">
                                 <option>Less than $1,000</option>
                                 <option selected>$1,500 - $5,000</option>
                                 <option>$5,000 - $10,000</option>
